fix: login button, update scrollbar color, fix navbar container height, use css var for gradient

--- a/components/Navbar.css
+++ b/components/Navbar.css
@@ -27,10 +27,14 @@
 
 #navbar .navbar-container {
   overflow: hidden auto;
-  height: calc(100vh - 270px);
+  height: calc(100vh - 280px);
 }
 
-#navbar .login-button button {
+#navbar .simplebar-scrollbar::before {
+  background: #8d8d8d;
+}
+
+#navbar .login-button {
   display: block;
   width: min-content;
   margin: 0 auto 40px auto;
@@ -39,10 +43,6 @@
   font-size: 18px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  background: linear-gradient(135deg, var(--primary-color) 15%, var(--secondary-color) 85%);
-  color: #fff;
-  border: none;
-  border-radius: 0;
 }
 
 #navbar .navbar-container a {
