--- a/components/UI/Collapse.css
+++ b/components/UI/Collapse.css
@@ -18,7 +18,7 @@
   left: 0;
   width: 100%;
   height: 5px;
-  background: linear-gradient(to right, var(--primary-color) 15%, var(--secondary-color) 85%);
+  background: var(--gradient);
 }
 
 .card .content {
