--- a/components/UI/Title.css
+++ b/components/UI/Title.css
@@ -35,7 +35,7 @@
 
 .title-1::before,
 .title-1::after {
-  background: linear-gradient(to right, var(--primary-color) 15%, var(--secondary-color) 85%);
+  background: var(--gradient);
   content: "";
   display: inline-block;
   height: 2px;
